--- a/episodes/season_06.yml
+++ b/episodes/season_06.yml
@@ -8,9 +8,9 @@ episodes:
   simpsonsworld_id: 300925507538
   good: true
   characters:
-  - bart
-  - lisa
-  - ned
+    - bart
+    - lisa
+    - ned
 - title: Lisa's Rival
   season: 6
   episode: 2
@@ -20,8 +20,8 @@ episodes:
   simpsonsworld_id: 278809667691
   good: false
   characters:
-  - lisa
-  - homer
+    - lisa
+    - homer
 - title: Another Simpsons Clip Show
   season: 6
   episode: 3
@@ -30,7 +30,7 @@ episodes:
   simpsonsworld_id: 300928067775
   good: false
   characters:
-  - clip_show
+    - clip_show
 - title: Itchy and Scratchy Land
   season: 6
   episode: 4
@@ -39,7 +39,7 @@ episodes:
   simpsonsworld_id: 283752003577
   good: true
   characters:
-  - family
+    - family
 - title: Sideshow Bob Roberts
   season: 6
   episode: 5
@@ -48,8 +48,8 @@ episodes:
   simpsonsworld_id: 275729987504
   good: true
   characters:
-  - bart
-  - sideshow_bob
+    - bart
+    - sideshow_bob
 - title: Treehouse of Horror V
   season: 6
   episode: 6
@@ -57,7 +57,7 @@ episodes:
   simpsonsworld_id: 299597891663
   good: true
   characters:
-  - treehouse_of_horror
+    - treehouse_of_horror
 - title: Bart's Girlfriend
   season: 6
   episode: 7
@@ -66,7 +66,7 @@ episodes:
   simpsonsworld_id: 275744323759
   good: true
   characters:
-  - bart
+    - bart
 - title: Lisa on Ice
   season: 6
   episode: 8
@@ -75,8 +75,8 @@ episodes:
   simpsonsworld_id: 275746371575
   good: true
   characters:
-  - bart
-  - lisa
+    - bart
+    - lisa
 - title: Homer Badman
   season: 6
   episode: 9
@@ -84,7 +84,7 @@ episodes:
   simpsonsworld_id: 275746883653
   good: true
   characters:
-  - homer
+    - homer
 - title: Grampa vs. Sexual Inadequacy
   season: 6
   episode: 10
@@ -93,8 +93,8 @@ episodes:
   simpsonsworld_id: 274264643876
   good: true
   characters:
-  - homer
-  - grandpa
+    - homer
+    - grandpa
 - title: Fear of Flying
   season: 6
   episode: 11
@@ -103,7 +103,7 @@ episodes:
   simpsonsworld_id: 305684547546
   good: false
   characters:
-  - marge
+    - marge
 - title: Homer the Great
   season: 6
   episode: 12
@@ -112,14 +112,14 @@ episodes:
   simpsonsworld_id: 275745859881
   good: true
   characters:
-  - homer
+    - homer
 - title: And Maggie Makes Three
   season: 6
   episode: 13
   description: Homer recounts how Maggie's accidental birth changed his life forever.
   simpsonsworld_id: 278796867754
   good: false
-  characters:[]
+  characters:
 - title: Bart's Comet
   season: 6
   episode: 14
@@ -127,7 +127,7 @@ episodes:
   simpsonsworld_id: 275746883888
   good: true
   characters:
-  - bart
+    - bart
 - title: Homie the Clown
   season: 6
   episode: 15
@@ -135,8 +135,8 @@ episodes:
   simpsonsworld_id: 279723587611
   good: true
   characters:
-  - homer
-  - krusty
+    - homer
+    - krusty
 - title: Bart vs. Australia
   season: 6
   episode: 16
@@ -145,7 +145,7 @@ episodes:
   simpsonsworld_id: 275748931680
   good: true
   characters:
-  - bart
+    - bart
 - title: Homer vs. Patty and Selma
   season: 6
   episode: 17
@@ -154,9 +154,9 @@ episodes:
   simpsonsworld_id: 305686083529
   good: true
   characters:
-  - homer
-  - patty
-  - selma
+    - homer
+    - patty
+    - selma
 - title: A Star Is Burns
   season: 6
   episode: 18
@@ -165,8 +165,8 @@ episodes:
   simpsonsworld_id: 283753539580
   good: true
   characters:
-  - marge
-  - homer
+    - marge
+    - homer
 - title: Lisa's Wedding
   season: 6
   episode: 19
@@ -175,7 +175,7 @@ episodes:
   simpsonsworld_id: 275751491511
   good: false
   characters:
-  - lisa
+    - lisa
 - title: Two Dozen and One Greyhounds
   season: 6
   episode: 20
@@ -184,9 +184,9 @@ episodes:
   simpsonsworld_id: 278807107855
   good: true
   characters:
-  - bart
-  - lisa
-  - mr_burns
+    - bart
+    - lisa
+    - mr_burns
 - title: The PTA Disbands
   season: 6
   episode: 21
@@ -195,8 +195,8 @@ episodes:
   simpsonsworld_id: 294780995610
   good: true
   characters:
-  - bart
-  - marge
+    - bart
+    - marge
 - title: "'Round Springfield"
   season: 6
   episode: 22
@@ -205,9 +205,9 @@ episodes:
   simpsonsworld_id: 275755587777
   good: true
   characters:
-  - lisa
-  - bart
-  - marge
+    - lisa
+    - bart
+    - marge
 - title: The Springfield Connection
   season: 6
   episode: 23
@@ -215,8 +215,8 @@ episodes:
   simpsonsworld_id: 305689155572
   good: true
   characters:
-  - marge
-  - wiggum
+    - marge
+    - wiggum
 - title: Lemon of Troy
   season: 6
   episode: 24
@@ -225,8 +225,8 @@ episodes:
   simpsonsworld_id: 274269763684
   good: true
   characters:
-  - bart
-  - homer
+    - bart
+    - homer
 - title: Who Shot Mr. Burns? (Part One)
   season: 6
   episode: 25
@@ -236,5 +236,5 @@ episodes:
   simpsonsworld_id: 294781507859
   good: true
   characters:
-  - mr_burns
-  - ensemble
+    - mr_burns
+    - ensemble
