--- a/episodes/season_03.yml
+++ b/episodes/season_03.yml
@@ -7,7 +7,7 @@ episodes:
     man who thinks he is Michael Jackson helps Bart write a song for Lisa when he
     forgets her birthday.
   simpsonsworld_id: 272234051980
-  good: maybe
+  good: false
   characters:
 - title: Mr. Lisa Goes to Washington
   season: 3
@@ -23,7 +23,7 @@ episodes:
   description: Ned Flanders opens a store for left-handed people and Homer is overjoyed
     when it performs poorly.
   simpsonsworld_id: 272051267562
-  good: maybe
+  good: true
   characters:
 - title: Bart the Murderer
   season: 3
@@ -39,7 +39,7 @@ episodes:
   description: Homer becomes a hero when he averts a catastrophe at the power plant,
     but what is perceived as his skill of being a quick thinker is actually dumb luck.
   simpsonsworld_id: 256843843704
-  good: maybe
+  good: true
   characters:
 - title: Like Father, Like Clown
   season: 3
@@ -63,7 +63,7 @@ episodes:
   description: Homer realizes that he never shows Lisa the attention she deserves
     and buys her a pony.
   simpsonsworld_id: 310374467809
-  good: maybe
+  good: false
   characters:
 - title: Saturdays of Thunder
   season: 3
@@ -87,7 +87,7 @@ episodes:
   description: Homer is fired from his job when a German firm buys the power plant
     from Mr. Burns.
   simpsonsworld_id: 310380099512
-  good: maybe
+  good: false
   characters:
 - title: I Married Marge
   season: 3
@@ -95,7 +95,7 @@ episodes:
   description: When Marge believes she may be pregnant, Homer recounts how Bart was
     born.
   simpsonsworld_id: 299618371603
-  good: maybe
+  good: false
   characters:
 - title: Radio Bart
   season: 3
@@ -153,14 +153,14 @@ episodes:
   description: The Simpsons must choose between frills and their dog when Santa's
     Little Helper needs an expensive operation to save its life.
   simpsonsworld_id: 274404419620
-  good: maybe
+  good: true
   characters:
 - title: Colonel Homer
   season: 3
   episode: 20
   description: Homer becomes the manager of a beautiful Country Western singer.
   simpsonsworld_id: 272215619762
-  good: maybe
+  good: true
   characters:
 - title: Black Widower
   season: 3
