--- a/episodes/season_19.yml
+++ b/episodes/season_19.yml
@@ -37,8 +37,7 @@ episodes:
   episode: 5
   description: 'In three tales of Halloween terror: Homer and Marge attempt to eliminate
     one another after discovering their secret identities; Bart and Lisa aid Kodos
-    the space alien; Flanders uses the seven deadly sins to punish Bart. Presented
-    by FXX.'
+    the space alien; Flanders uses the seven deadly sins to punish Bart.'
   simpsonsworld_id: 302852163741
   good: maybe
   characters:
@@ -123,7 +122,7 @@ episodes:
   season: 19
   episode: 15
   description: Lisa becomes addicted to secondhand smoke when she joins a ballet academy;
-    Homer befriends raccoons who stole his beef jerky. Presented by FXX.
+    Homer befriends raccoons who stole his beef jerky.
   simpsonsworld_id: 310477379554
   good: maybe
   characters:
