--- a/episodes/season_14.yml
+++ b/episodes/season_14.yml
@@ -7,7 +7,7 @@ episodes:
     zombie cowboys threaten to destroy Springfield after Lisa outlaws guns; the Simpsons
     travel to an island inhabited by 'manimals.'
   simpsonsworld_id: 221301315863
-  good: maybe
+  good: true
   characters:
 - title: How I Spent My Strummer Vacation
   season: 14
