--- a/episodes/season_10.yml
+++ b/episodes/season_10.yml
@@ -69,14 +69,14 @@ episodes:
   episode: 9
   description: Homer takes on the mob when he acts as Mayor Quimby's bodyguard.
   simpsonsworld_id: 473163843671
-  good: maybe
+  good: true
   characters:
 - title: Viva Ned Flanders
   season: 10
   episode: 10
   description: Homer shows Flanders how to enjoy life by taking him to Las Vegas.
   simpsonsworld_id: 473115203586
-  good: maybe
+  good: false
   characters:
 - title: Wild Barts Can't Be Broken
   season: 10
@@ -155,7 +155,7 @@ episodes:
   episode: 20
   description: Bart must perform community service at Grampa's retirement home.
   simpsonsworld_id: 279757379586
-  good: maybe
+  good: true
   characters:
 - title: Monty Can't Buy Me Love
   season: 10
@@ -170,7 +170,7 @@ episodes:
   episode: 22
   description: Lisa is invited to join Mensa; Homer receives a free erotic photo session.
   simpsonsworld_id: 306868803826
-  good: maybe
+  good: false
   characters:
 - title: Thirty Minutes Over Tokyo
   season: 10
