Straighten out character data model

--- a/characters/school.yml
+++ b/characters/school.yml
@@ -4,3 +4,5 @@ characters:
   name: Seymour Skinner
 - short_name: edna
   name: Edna Krabapple
+- short_name: chalmers
+  name: Superintendent Chalmers
