--- a/characters/krusty.yml
+++ b/characters/krusty.yml
@@ -4,3 +4,5 @@ characters:
   name: Krusty the Clown
 - short_name: sideshow_bob
   name: Sideshow Bob Roberts
+- short_name: sideshow_mel
+  name: Sideshow Mel
