fix spelling error of jebediah somehow

--- a/characters/simpsons.yml
+++ b/characters/simpsons.yml
@@ -11,6 +11,6 @@ characters:
 - short_name: maggie
   name: Margaret Evelyn Simpson
 - short_name: grandpa_simpson
-  full_name: Abraham Jebendiah Simpson
+  full_name: Abraham Jebediah Simpson
 - short_name: grandma_simpson
   full_name: Mona Simpson
