--- a/episodes/season_10.yml
+++ b/episodes/season_10.yml
@@ -22,7 +22,7 @@ episodes:
   description: Bart tends to a nest filled with eggs after he inadvertently kills
     a bird with a BB gun.
   simpsonsworld_id: 473109571557
-  good: maybe
+  good: true
   characters:
 - title: Treehouse of Horror IX
   season: 10
@@ -39,7 +39,7 @@ episodes:
   description: Homer befriends a group of Hollywood celebrities vacationing in a remote
     part of town and promises to keep their whereabouts a secret.
   simpsonsworld_id: 473147459674
-  good: maybe
+  good: false
   characters:
 - title: D'oh-in' in the Wind
   season: 10
@@ -62,7 +62,7 @@ episodes:
   description: Homer offers to donate one of his kidneys to Grampa until he realizes
     the surgery will place his own life in jeopardy.
   simpsonsworld_id: 473158211896
-  good: maybe
+  good: false
   characters:
 - title: Mayored to the Mob
   season: 10
@@ -99,7 +99,7 @@ episodes:
   description: Homer changes his name when a dimwitted television show character named
     "Homer Simpson" becomes an overnight sensation.
   simpsonsworld_id: 473140803870
-  good: maybe
+  good: false
   characters:
 - title: I'm with Cupid
   season: 10
@@ -107,7 +107,7 @@ episodes:
   description: Apu showers his wife with Valentine's Day surprises making men throughout
     Springfield look like cheapskates.
   simpsonsworld_id: 473104963819
-  good: maybe
+  good: true
   characters:
 - title: 'Marge Simpson in: ''Screaming Yellow Honkers'''
   season: 10
@@ -115,7 +115,7 @@ episodes:
   description: Marge discovers the pleasures of driving a sport utility vehicle until
     aggressive highway habits cost her.
   simpsonsworld_id: 473097795997
-  good: maybe
+  good: true
   characters:
 - title: Make Room for Lisa
   season: 10
@@ -123,7 +123,7 @@ episodes:
   description: Lisa exhibits signs of stress when she is forced into sharing her brother's
     bedroom.  Marge becomes addicted to eavesdropping on cellular phone conversations.
   simpsonsworld_id: 473093187636
-  good: maybe
+  good: false
   characters:
 - title: Maximum Homerdrive
   season: 10
@@ -163,7 +163,7 @@ episodes:
   description: Mr. Burns attempts to win adoration by transporting the Loch Ness monster
     to Springfield.
   simpsonsworld_id: 310427203648
-  good: maybe
+  good: false
   characters:
 - title: They Saved Lisa's Brain
   season: 10
