remove presented by fxx-es

--- a/episodes/season_15.yml
+++ b/episodes/season_15.yml
@@ -58,7 +58,7 @@ episodes:
   episode: 7
   description: As Christmas approaches, Homer discovers the true meaning of the season
     after watching an animated version of A Christmas Carol on television.  But Flanders
-    find it impossible to live as the second-nicest-guy in town. Presented by FXX.
+    find it impossible to live as the second-nicest-guy in town.
   simpsonsworld_id: 227364931670
   good: maybe
   characters:
