--- a/episodes/season_16.yml
+++ b/episodes/season_16.yml
@@ -48,7 +48,7 @@ episodes:
   season: 16
   episode: 6
   description: Homer and Grampa smuggle drugs out of Canada after Mr. Burns terminates
-    his company's employee prescription drug program. Presented by FXX.
+    his company's employee prescription drug program.
   simpsonsworld_id: 1094235715818
   good: maybe
   characters:
