--- a/episodes/season_17.yml
+++ b/episodes/season_17.yml
@@ -157,7 +157,7 @@ episodes:
   episode: 19
   description: After Skinner is fired for insinuating that girls are inferior to boys
     in math, Springfield Elementary is split into two groups-boys and girls-forcing
-    Lisa to dress up like a boy so she can attend a math class. Presented by FXX.
+    Lisa to dress up like a boy so she can attend a math class.
   simpsonsworld_id: 274367043639
   good: maybe
   characters:
