--- a/episodes/season_18.yml
+++ b/episodes/season_18.yml
@@ -22,7 +22,7 @@ episodes:
   episode: 3
   description: Marge starts her own carpentry business, only to discover that men
     don't trust a woman to do the job; Bart discovers that Skinner is allergic to
-    peanuts. Presented by FXX.
+    peanuts.
   simpsonsworld_id: 283760707876
   good: maybe
   characters:
