--- a/episodes/season_21.yml
+++ b/episodes/season_21.yml
@@ -46,8 +46,7 @@ episodes:
   season: 21
   episode: 6
   description: Skinner tells Bart about a former Springfield Elementary student who
-    was the best prankster ever; Marge begins shopping at a natural foods store. Presented
-    by FXX.
+    was the best prankster ever; Marge begins shopping at a natural foods store.
   simpsonsworld_id: 792414787985
   good: maybe
   characters:
