--- a/episodes/season_22.yml
+++ b/episodes/season_22.yml
@@ -47,8 +47,7 @@ episodes:
   season: 22
   episode: 6
   description: When a dying Mr. Burns loses his memory, the residents of Springfield
-    exact revenge on the abusive billionaire by using him as their plaything. Presented
-    by FXX.
+    exact revenge on the abusive billionaire by using him as their plaything.
   simpsonsworld_id: 263544387571
   good: maybe
   characters:
@@ -98,7 +97,7 @@ episodes:
   episode: 12
   description: Homer uses plotlines from a 1980's sitcom to deal with Bart when the
     boy grows obsessed with obtaining a cool mini-bike; Bart attempts to trade nuclear
-    secrets to the Chinese government. Presented by FXX.
+    secrets to the Chinese government.
   simpsonsworld_id: 256851523744
   good: maybe
   characters:
