--- a/episodes/season_23.yml
+++ b/episodes/season_23.yml
@@ -57,7 +57,7 @@ episodes:
   season: 23
   episode: 7
   description: Burns appoints Homer the nuclear power plant's new account man, damning
-    him to a 'Mad Men'-like existence; Lisa becomes Bart's mentor. Presented by FXX.
+    him to a 'Mad Men'-like existence; Lisa becomes Bart's mentor.
   simpsonsworld_id: 1071533123906
   good: maybe
   characters:
@@ -116,7 +116,7 @@ episodes:
   season: 23
   episode: 14
   description: Fed up with the family's negative impact on the city, townspeople banish
-    the Simpsons from Springfield. Presented by FXX.
+    the Simpsons from Springfield.
   simpsonsworld_id: 230541891832
   good: maybe
   characters:
