--- a/episodes/season_25.yml
+++ b/episodes/season_25.yml
@@ -194,7 +194,7 @@ episodes:
   episode: 25
   description: 'A theatrical short that premiered July 13, 2012, attached to the theatrical
     release of Ice Age: Continental Drift.  It was nominated for an Academy Award
-    for Best Animated Short. Presented by FXX.'
+    for Best Animated Short.'
   simpsonsworld_id: 588949571786
   good: maybe
   characters:
