--- a/characters/school.yml
+++ b/characters/school.yml
@@ -6,3 +6,7 @@ characters:
   name: Edna Krabapple
 - short_name: chalmers
   name: Superintendent Chalmers
+- short_name: martin
+  name: Martin Prince
+- short_name: ralph
+  name: Ralph Wiggum
